填充了各种图表的默认值

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -94,7 +94,67 @@ html(class="no-js", lang="")
                         tr(class=["odd", "gradeX"])
                           td vinda
                           td 49.9
-                          td 22%
+                          td 4.98%
+                        tr(class=['even', 'gradeC'])
+                          td walch
+                          td 50.98
+                          td 4.07%
+                        tr(class=["odd", "gradeX"])
+                          td 清风
+                          td 46.09
+                          td 3.67%
+                        tr(class=['even', 'gradeC'])
+                          td 遇见香芬
+                          td 32.6
+                          td 2.60%
+                        tr(class=["odd", "gradeX"])
+                          td 心心相印
+                          td 18.62
+                          td 2.28%
+                        tr(class=['even', 'gradeC'])
+                          td 透蜜
+                          td 20.1
+                          td 1.16%
+                        tr(class=["odd", "gradeX"])
+                          td 洁柔
+                          td 19.74
+                          td 1.57%
+                        tr(class=['even', 'gradeC'])
+                          td 检察官
+                          td 18.44
+                          td 1.47%
+                        tr(class=["odd", "gradeX"])
+                          td 苏菲
+                          td 18.06
+                          td 1.44%
+                        tr(class=['even', 'gradeC'])
+                          td 长耀堂
+                          td 16.89
+                          td 1.35%
+                        tr(class=["odd", "gradeX"])
+                          td 蓝月亮
+                          td 16.85
+                          td 1.34%
+                        tr(class=['even', 'gradeC'])
+                          td 金泰康
+                          td 12.28
+                          td 0.98%
+                        tr(class=["odd", "gradeX"])
+                          td 拉芳
+                          td 11.30
+                          td 0.9%
+                        tr(class=['even', 'gradeC'])
+                          td 沙宣
+                          td 11.26
+                          td 0.9%
+                        tr(class=["odd", "gradeX"])
+                          td 舒客
+                          td 10.53
+                          td 0.84%
+                        tr(class=['even', 'gradeC'])
+                          td 海飞丝
+                          td 10.4
+                          td 0.83%
 
       div(class=['contain_group3'])(style='display:none')
         div(class='canvas_contain col-lg-10',id='svgChart')
@@ -134,46 +194,50 @@ html(class="no-js", lang="")
                               th 占比
                           tbody#tbody3
                             tr(class=["odd", "gradeX"])
-                              td Trident
-                              td Internet Explorer 4.0
-                              td Win 95+
+                              td 洗发沐浴/个人清洁
+                              td 635333980
+                              td 40.9%
 
                             tr(class=['even', 'gradeC'])
-                              td Trident
-                              td Internet Explorer 5.0
-                              td Win 95+
+                              td 纸品/湿巾
+                              td 297083785
+                              td 19.12%
 
                             tr(class=["odd", "gradeA"])
-                              td Trident</td>
-                              td Internet Explorer 5.5</td>
-                              td Win 95+</td>
+                              td 卫生巾/护垫/成人尿裤
+                                td 141679615
+                                td 9.12%
                             tr(class=['even', 'gradeC'])
-                              td Trident
-                              td Internet Explorer 5.0
-                              td Win 95+
+                              td 衣物清洁剂/护理剂
+                                td 130143905
+                                td 8.38%
 
                             tr(class=["odd", "gradeA"])
-                              td Trident</td>
-                              td Internet Explorer 5.5</td>
-                              td Win 95+</td>
+                              td 家庭环境清洁剂
+                              td 115280370
+                              td 7.43%
                             tr(class=['even', 'gradeC'])
-                              td Trident
-                              td Internet Explorer 5.0
-                              td Win 95+
+                              td 室内除臭/芳香用品
+                              td 79968760
+                              td 5.15%
 
                             tr(class=["odd", "gradeA"])
-                              td Trident</td>
-                              td Internet Explorer 5.5</td>
-                              td Win 95+</td>
+                              td 家私/皮具护理品
+                              td 70457945
+                              td 4.54%
                             tr(class=['even', 'gradeC'])
-                              td Trident
-                              td Internet Explorer 5.0
-                              td Win 95+
+                              td 香熏用品
+                              td 56205570
+                              td 3.62%
 
                             tr(class=["odd", "gradeA"])
-                              td Trident</td>
-                              td Internet Explorer 5.5</td>
-                              td Win 95+</td>
+                              td 驱虫用品
+                              td 27251910
+                              td 1.75%
+                            tr(class=['even', 'gradeC'])
+                              td 其他
+                              td 0
+                              td 0
 
       div(class=['contain_group2'])(style='display:none')
         div(class='canvas_contain col-lg-10',id='categoryTendency')
@@ -212,8 +276,7 @@ html(class="no-js", lang="")
                           th 11月
                           th 12月
                       tbody#tbody2
-                        tr(class=["odd", "gradeX"])
-                          td 1.洗发沐浴/个人清洁
+
 
       div(class=['contain_group1'])(style='display:none')
         div(class='canvas_contain col-lg-10',id='fristCanvas')
@@ -247,19 +310,60 @@ html(class="no-js", lang="")
                           th 占比
                       tbody#tbody1
                         tr(class=["odd", "gradeX"])
-                          td Trident
-                          td Internet Explorer 4.1
-                          td Win 95+
+                          td 1月
+                          td 1553405840
+                          td 6.63%
 
                         tr(class=['even', 'gradeC'])
-                          td Trident
-                          td Internet Explorer 5.0
-                          td Win 95+
+                          td 2月
+                          td 1017550970
+                          td 4.34%
 
-                        tr(class=["odd", "gradeA"])
-                          td Trident</td>
-                          td Internet Explorer 5.5</td>
-                          td Win 95+</td>
+                        tr(class=["odd", "gradeX"])
+                          td 3月
+                          td 1987857760
+                          td 8.49%
+
+                        tr(class=['even', 'gradeC'])
+                          td 4月
+                          td 1837843595
+                          td 7.84%
+                        tr(class=["odd", "gradeX"])
+                          td 5月
+                          td 2204432375
+                          td 9.41%
+
+                        tr(class=['even', 'gradeC'])
+                          td 6月
+                          td 2298639535
+                          td 9.81%
+                        tr(class=["odd", "gradeX"])
+                          td 7月
+                          td 2188716450
+                          td 9.34%
+
+                        tr(class=['even', 'gradeC'])
+                          td 8月
+                          td 2209583300
+                          td 9.43%
+                        tr(class=["odd", "gradeX"])
+                          td 9月
+                          td 2555400675
+                          td 10.91%
+
+                        tr(class=['even', 'gradeC'])
+                          td 10月
+                          td 2568716715
+                          td 10.97%
+                        tr(class=["odd", "gradeX"])
+                          td 11月
+                          td 2991361230
+                          td 12.77%
+
+                        tr(class=['even', 'gradeC'])
+                          td 12月
+                          td 0
+                          td 0
 
 
     div(class='container2',id='container2')
@@ -289,31 +393,31 @@ html(class="no-js", lang="")
               #skills
                 progress(value="50.71" max="100" id='rank_value1')
                 span#rank_name1 洗发沐浴
-                p#rank_num1
+                p#rank_num1 50.71%
                 progress(value="10.19" max="100" id='rank_value2')
                 span#rank_name2 卫生巾/护垫/成人尿裤
-                p#rank_num2
+                p#rank_num2 10.19%
                 progress(value="8.32" max="100" id='rank_value3')
                 span#rank_name3 家私/皮具护理品
-                p#rank_num3
+                p#rank_num3 8.32%
                 progress(value="7.53" max="100" id='rank_value4')
                 span#rank_name4 香薰用品
-                p#rank_num4
+                p#rank_num4 7.53%
                 progress(value="6.42" max="100" id='rank_value5')
                 span#rank_name5 纸巾/湿巾
-                p#rank_num5
+                p#rank_num5 6.42%
                 progress(value="6.01" max="100" id='rank_value6')
                 span#rank_name6 家庭环境清洁剂
-                p#rank_num6
+                p#rank_num6 6.01%
                 progress(value="4.03" max="100" id='rank_value7')
                 span#rank_name7 驱虫用品
-                p#rank_num7
+                p#rank_num7 4.03%
                 progress(value="3.57" max="100" id='rank_value8')
                 span#rank_name8 衣物清洁剂/护理剂
-                p#rank_num8
+                p#rank_num8 3.57%
                 progress(value="3.22" max="100" id='rank_value9')
                 span#rank_name9 室内除臭/芳香用品
-                p#rank_num9
+                p#rank_num9 3.22%
 
   script(src="js/choose.js")
   script(src="lib/timejquery.js")
@@ -358,7 +462,6 @@ html(class="no-js", lang="")
   script(src="lib/datatables.js")
   script(src="js/datatable.js")
   script(src="js/dynamic.js")
-  script(src="js/click.js")
   script(src="js/barChart.js")
   script(src="js/percentagepile.js")
   script(src="js/fullwidthchart.js")
