修改类目趋势表格边距

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -254,7 +254,7 @@ html(class="no-js", lang="")
         div(class='canvas_contain col-lg-10',id='cbrand_table')(style='display:none')
           .row
             .col-md-12
-              .block-flat
+              .block-flat3
                 .header
                   h3 各类目占比详情
                 .content
