--- a/src/public/css/tablestyle.css
+++ b/src/public/css/tablestyle.css
@@ -5152,6 +5152,19 @@ body.modal-open,
 .block-flat2,
 .block-wizard2 {
 
+     background: #FFF;
+     border-radius: 3px;
+     position: relative;
+     -webkit-border-radius: 3px;
+     border: 1px solid #efefef;
+     box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04);
+     transition: padding 500ms;
+     -moz-transition: padding 500ms;
+     -webkit-transition: padding 500ms;
+   }
+.block-flat3,
+.block-wizard2 {
+
   background: #FFF;
   border-radius: 3px;
   position: relative;
